criado url postgres

--- a/academia-digital-1.0.0/src/main/resources/application.yml
+++ b/academia-digital-1.0.0/src/main/resources/application.yml
@@ -1,3 +1,5 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/academia/
+    url: jdbc:postgresql://localhost:5432/academia
+    username: postgres
+    password: 6640
