criando jpa e o hibernate

--- a/academia-digital-1.0.0/src/main/resources/application.yml
+++ b/academia-digital-1.0.0/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/academia
     username: postgres
     password: 6640
+jpa:
+  show-sql: true
+  hibernate:
+    ddl-auto: update
