--- a/academia-digital-1.0.0/src/main/resources/application.yml
+++ b/academia-digital-1.0.0/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/academia
+    url: jdbc:postgresql://localhost:5432/academia?useTimezone=true&serverTimezone=UTC&useLegacyDate
     username: postgres
     password: 6640
 jpa:
